2007-08-22  Murad Tagirov  <tmurad@gmail.com>

    Display time spent to parse kml file.
    * src/lib/PlaceMarkManager.cpp

    Pack/Unpack placemark's coordinates
    * src/lib/PlaceMark.cpp

    Class diagram updated
    * docs/projects/kml/KMLClasses.xmi

2007-08-22  Murad Tagirov  <tmurad@gmail.com>

    Added new class KMLFileViewItem. FileViewItem
    now shows loaded kml documents. It's possible to
    show or hide them. TODO: save/close kml documents
    * src/lib/MarbleWidget.cpp
    * src/lib/MarbleModel.{h,cpp}
    * src/lib/FileViewModel.{h,cpp}
    * src/lib/MarbleControlBox.cpp
    * src/lib/PlaceMarkManager.{h,cpp}
    * src/lib/GpxFileViewItem.h
    * src/lib/CMakeLists.txt
    * src/lib/KMLFileViewItem.{h,cpp}: new class

2007-08-22  Inge Wallin  <inge@lysator.liu.se>

	Daily Krazy issues. This time: Spelling errors
	* src/lib/gps/GpsTracking.cpp (GpsTracking):      Fix spello
	* src/lib/AbstractLayer/AbstractLayer.h:          Fix spello
	* src/lib/AbstractLayer/AbstractLayerContainer.h: Fix spello

2007-08-21  Torsten Rahn  <rahn@kde.org>

	* src/lib/CMakeLists.txt:
	- Library Version number: 0.4.0

2007-08-21  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: TinyWebBrowser
	* src/lib/tinywebbrowser.cpp: renamed into TinyWebBrowser.cpp
	* src/lib/tinywebbrowser.h:   renamed into TinyWebBrowser.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/PlaceMarkInfoDialog.ui: use new name

	Rename files according to the coding standards: VectorComposer
	* src/lib/vectorcomposer.cpp: renamed into VectorComposer.cpp
	* src/lib/vectorcomposer.h:   renamed into VectorComposer.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.h: use new name
	* src/lib/ViewParams.cpp: use new name

	Rename files according to the coding standards: VectorMap
	* src/lib/vectormap.cpp: renamed into VectorMap.cpp
	* src/lib/vectormap.h:   renamed into VectorMap.h
	* src/lib/CMakeLists.txt:  Reflect name changes